Fix: Ensure SeparatorRow toggle (isCollapsed) responds only to keyboard left/right keys and not to mouse cell movement

--- a/src/components/Table/css/CustomTextCellTemplate.css
+++ b/src/components/Table/css/CustomTextCellTemplate.css
@@ -36,6 +36,12 @@
   font-size: 0.8rem;
 }
 
+.rg-separator-celleditor {
+  width: auto !important;
+  left: 55px !important;
+  background-color: aliceblue;
+}
+
 .rg-customText-celleditor {
   width: auto !important;
   background-color: aliceblue;
